objects/Test123__c.object
<CustomObject>
    <label>Test123</label>
    <nameField>
        <label>Test123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test123</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://9895com-dev-ed.file.force.com/servlet/servlet.FileDownload?file=0155i000000YkGx&quot;, &quot;Train&quot;)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewPick__c</fullName>
        <label>NewPick</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickupLoc__c</fullName>
        <label>PickupLoc</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>WorkLoc__c</fullName>
        <label>WorkLoc</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
</CustomObject>